--- a/appsettings.json
+++ b/appsettings.json
@@ -5,5 +5,9 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=localhost;Database=NadinSoft;Trusted_Connection=True;"
+  },
+
   "AllowedHosts": "*"
 }
