Add JWT in Program.cs

--- a/appsettings.json
+++ b/appsettings.json
@@ -6,7 +6,13 @@
     }
   },
   "ConnectionStrings": {
-    "DefaultConnection": "Server=localhost;Database=NadinSoft;Trusted_Connection=True;"
+    "DefaultConnection": "Server=(localdb)\\MSSQLLocalDB;Database=NadinSoft;Trusted_Connection=True;"
+  },
+  "Jwt": {
+    "Key": "S9NLnoxwSwKsZWER",
+    "Issuer": "YourProjectAPI",
+    "Audience": "YourProjectAPIUsers",
+    "ExpireMinutes": 60
   },
 
   "AllowedHosts": "*"
