Add Login action to authController

--- a/appsettings.json
+++ b/appsettings.json
@@ -9,9 +9,9 @@
     "DefaultConnection": "Server=(localdb)\\MSSQLLocalDB;Database=NadinSoft;Trusted_Connection=True;"
   },
   "Jwt": {
-    "Key": "S9NLnoxwSwKsZWER",
-    "Issuer": "YourProjectAPI",
-    "Audience": "YourProjectAPIUsers",
+    "Key": "THIS_IS_A_VERY_LONG_AND_SECURE_JWT_KEY_123456",
+    "Issuer": "NadinSoft",
+    "Audience": "NadinSoftUsers",
     "ExpireMinutes": 60
   },
 
