--- a/NadinSoftTask.csproj
+++ b/NadinSoftTask.csproj
@@ -21,4 +21,9 @@
     <PackageReference Include="System.IdentityModel.Tokens.Jwt" Version="8.16.0" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Application\Products\Handlers\" />
+    <Folder Include="Application\Products\Queries\" />
+  </ItemGroup>
+
 </Project>
